--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote_theme: poole/lanyon
+remote_theme: lanyon
 plugins:
   - jekyll-feed
 
