--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote_theme: lanyon
+theme: minima
 plugins:
   - jekyll-feed
 
